# blockboost

./: Makefile  README.md  pyproject.toml
src/data/download/: download_abstract_titles.py  download_abt_buy.py  download_amazon_google.py  download_celebA.py  download_cifar10.py  download_cora.py  download_cora_full.py  download_dblp_acm.py  download_dblp_scholar.py  download_iris.py  download_musicbrainz.py  download_rldata.py  download_sift1m.py  download_walmart_amazon.py  generate_artificial.py  generate_artificial_gaussian.py  generate_artificial_images.py
src/data/eval/: check_missing_patterns.sh  create_similarity_measure_table.py  distances.py  number_of_matches_of_subsets-over-comb.cpp  number_of_matches_of_subsets.cpp  number_of_matches_of_subsets.sh  similarity_measure.cpp
src/data/process/: datasets.json  generate-klsh_octave-datasets.sh  process_abt_buy.py  process_all.sh  process_amazon_google.py  process_artificial.py  process_artificial_gaussian.py  process_artificial_images.py  process_celebA.py  process_cifar10.py  process_cora.py  process_cora_full.py  process_dblp_acm.py  process_dblp_scholar.py  process_iris.py  process_musicbrainz.awk  process_musicbrainz.py  process_restaurant.py  process_rldata.py  process_sift1m.py  process_walmart_amazon.py  split_columns-musicbrainz.sh  vectorize_SIF.py  vectorize_all.sh  (+7 more)
src/eval/: create_eval_tables.py  echo_report.sh  embedding.cpp  embedding.py  eval-restaurant-ctt-test.sh  eval.py  eval.sh  eval_histograms.py  fast_embedding.cpp  fast_embedding.py  generate_plotly_graphs.py  hamming.cpp  hamming.py  hamming.sh  knn.cpp  knn.py  make_example.cpp  plot_metrics.py  weights_of_split_dataset.py
src/paper/: benchmark_atof.cpp  benchmark_blocking.cpp  benchmark_predict.cpp  generate-comparison_table.py  generate-hparam_images.py  weights.sh
src/setup/: initialize_directories.sh
src/utils/: embedding_utils.py  trap_errors.sh
(+33 files in other folders)
