[tool.poetry]
name = "recsys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.3"
pandas = "^1.4.1"
tqdm = "^4.63.0"
jupyter = "^1.0.0"
rake-nltk = "^1.0.6"
wget = "^3.2"
requests = "^2.27.1"
cinemagoer = "^2022.2.11"
matplotlib = "^3.5.1"
omdb = "^0.10.1"
deep-translator = "^1.8.1"
langdetect = "^1.0.9"
dedupe = "^2.0.13"
Metaphone = "^0.6"
pycountry = "^22.3.5"
contractions = ">0.0.18"
spacy = "^3.2.4"
stanza = "^1.3.0"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
keybert = "^0.5.1"
xgboost = "^1.6.0"
flair = "^0.11.1"
mwxml = "^0.3.3"
pypandoc = "^1.7.5"
mwparserfromhell = "^0.6.4"
pyreadr = "^0.4.6"
datasketch = "^1.5.7"
dgl = "^0.9.0"
plt-cli = "^0.1"
shtab = "^1.5.5"
unique-names-generator = "^1.0.2"
plotly = "^5.10.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
py-tlsh = "^4.7.2"
py-entitymatching = "^0.4.0"
networkx = "^2.8.7"
pyspark = "^3.3.0"
pytorch-lightning = "^1.7.7"
tensorboard = "^2.10.1"
seaborn = "^0.12.1"
kaleido = "0.2.1"
statsmodels = "^0.13.5"
numba = "^0.56.4"
torchtext = "~0.13"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.flake8]
max-line-length = 120
max-complexity = 20
exclude = ".git"
select = "B,C,E,F,W,T4,B9"
ignore = "E203, E266, E501, W503, F403, F401"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
